scss/style.scss
:root {
  scroll-behavior: smooth;

  --color-bg: #fff;
  --text-color-white: #fcfcfc;
  --dev-color: #f2f2f2;

  --text-color: #0f0f0f;
  --action-color: #fe7624;
  --action-color-2: #205eff;
  --action-color-3: #5d21d1;
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;

  &-track {
    background: var(--color-bg)
  }

  &-thumb {
    background: var(--text-color);
  }
}

body {
  margin: 0;
  background-color: var(--color-bg);
  font-size: clamp(12px, 1vw, 18px);
}

a {
  color: inherit;
  text-decoration: none;
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 1.4em;
}

h1 {
  padding: 10px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 800;
  font-size: 4em;
}

h2 {
  padding: 10px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 3em;

  & .small {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    font-size: 2.5em;
  }
}

h3 {
  padding: 10px;
  text-transform: uppercase;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 1.6em;
}

p {
  padding: 10px;
  font-family: 'Poppins', sans-serif;
  font-weight: 500;
  font-size: 1.4em;

  &.number_circle {
    padding: 10px;
    font-family: 'Righteous', fantasy;
    font-weight: 400;
    font-size: 5.8em;
  }
}


.header {
  top: 0;
  width: 100%;
  z-index: 2;
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;

  box-shadow: 0 1px 10px 0 #000;
  backdrop-filter: blur(15px);

  &--container {
    margin: 0 auto;
    width: clamp(280px, 80%, 1240px);
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
  }
}

a.logo {
  display: flex;
  align-items: center;
  font-family: 'Righteous', sans-serif;
  font-weight: 400;
  font-size: 1.8em;
  padding: 10px 0;
  gap: 10px;

  img {
    width: clamp(48px, 4.5vw, 100px);
  }
}

.nav {
  display: none;
}

#hamburger {
  width: 40px;
}

.main {
  display: grid;
  margin: 120px auto;
  width: clamp(320px, 80%, 1240px);
  gap: 100px;
}

.landing {
  flex-direction: column;
  display: flex;
  gap: 20px;

  .right {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto 0;

    img {
      width: clamp(240px, 40vw, 628px);
    }
  }
}

.about_us {
  text-align: center;

  .illustrations {
    display: flex;
    justify-content: space-around;
    width: 100%;

    img {
      width: clamp(100px, 20vw, 300px);
    }
  }
}

.perks {
  text-align: center;

  .details {
    padding: 0;
  }

  .card:nth-child(1) p {

    &:before {
      background: var(--action-color);
      transform: translate(-47%, -50%);
    }

    &:after {
      color: var(--action-color-3);
      transform: translate(-53%, -50%);
    }
  }

  .card:nth-child(2) p {
    &:before {
      background: var(--text-color);
      transform: translate(-53%, -53%);
    }

    &:after {
      color: var(--action-color);
      transform: translate(-47%, -47%);
    }
  }

  .card:nth-child(3) p {
    &:before {
      background: var(--action-color-2);
      transform: translate(-53%, -47%);
    }

    &:after {
      color: var(--text-color);
      transform: translate(-47%, -53%);
    }
  }

  .card:nth-child(4) p {
    &:before {
      background: var(--text-color);
      transform: translate(-47%, -47%);
    }

    &:after {
      color: var(--action-color);
      transform: translate(-53%, -53%);
    }
  }

  .card:nth-child(5) p {
    &:before {
      background: var(--action-color);
      transform: translate(-53%, -47%);
    }

    &:after {
      color: var(--action-color-3);
      transform: translate(-50%, -53%);
    }
  }

  .card:nth-child(6) p {
    &:before {
      background: var(--action-color-2);
      transform: translate(-56%, -47%);
    }

    &:after {
      color: var(--action-color-3);
      transform: translate(-53%, -53%);
    }
  }

  .card:nth-child(7) p {
    &:before {
      background: var(--action-color);
      transform: translate(-47%, -53%);
    }

    &:after {
      color: var(--action-color-3);
      transform: translate(-53%, -47%);
    }
  }

  p.number_circle {
    padding: 0;
    font-weight: 800;
    color: var(--text-color-white);
    position: relative;
    width: 100%;

    &:before, &:after {
      content: '';
      position: absolute;
      left: 50%;
      top: 50%;
      transform: translate(-50%, -50%);
      z-index: -1;

      border-radius: 50%;

      width: 90%;
      min-width: 160px;
      max-width: 240px;
      aspect-ratio: 1/1;
    }

    &:after {
      border: 5px solid;
    }
  }
}

.supply_chain {
  h2 {
    text-align: center;
  }

  .step {
    width: 60%;
  }
}

.contact-us {
  text-align: center;

  .contact {
    display: flex;
    flex-direction: column;
    gap: 20px;

    img {
      width: clamp(240px, 40vw, 484px);
    }

    .left {
      display: grid;
      place-items: center;
    }

    .right {
      display: flex;
      justify-content: center;
      align-items: center;
    }
  }

  form {
    padding: 20px;
    display: flex;
    max-width: 620px;
    flex-direction: column;
    grid-gap: 20px;

    .form-identity {
      display: flex;
      grid-gap: 26px;

      input#name {
        width: 33%;
      }

      input#mail {
        width: 66%;
      }
    }
  }

  input, textarea {
    font-size: 1em;
    padding: 10px 20px;
    border: 3px solid var(--text-color);
    transition: box-shadow 0.5s;
    border-radius: 12px;
    box-shadow: none;

    &::placeholder {
      font-weight: bold;
      font-size: 1em;
      opacity: 0.25;
    }

    &[type=submit] {
      min-width: 25%;
      width: max-content;
      border: 3px solid transparent;
      font-family: 'Poppins', sans-serif;
      background-color: var(--action-color);
      box-shadow: 5px 5px 0 0 var(--text-color);
      padding: 10px 40px;
    }

    &:focus, &:focus-within {
      outline: 0;
      box-shadow: 5px 5px 0 0 var(--action-color);
    }
  }

  textarea {
    height: 150px;
    resize: none;
  }
}


footer {
  background-color: var(--dev-color);

  .container {
    padding: 40px 0;
    margin: 0 auto;
    width: clamp(320px, 80%, 1240px);
  }

  .list-wrapper {
    display: grid;
    place-items: center;
    overflow-x: scroll;
    width: 100%;
  }

  .list {
    display: flex;
    max-width: content-box;
  }

  .dev {
    display: grid;
    place-items: center;
    margin: 0 20px;

    img {
      width: 224px;
      height: 327px;
      overflow: hidden;
    }
  }

  .dev-name {
    width: calc(100% - 20px);
    text-align: center;
    padding: 10px;
    margin: 20px;
    font-size: 1.11em;
  }

  img, p {
    border-radius: 32px;
    border: 4px solid var(--text-color);
  }
}

.perks-wrapper {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  justify-content: center;

  .card {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: clamp(30%, 300px, 40%);
  }
}

@media (min-width: 920px) {
  #hamburger {
    display: none;
  }

  .nav {
    display: flex;

    .nav--link {
      padding: 10px 20px;
    }
  }

  .landing {
    flex-direction: row;
  }

  .contact-us .contact {
    flex-direction: row;
  }

  .card {
    transition: all 1s ease-in-out;
  }

  .supply_chain h2 {
    text-align: left;
  }
}

